<resources>
    <string name="app_name">acta</string>
    <string name="title_activity_acta">Acta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_acta">acta</string>
    <string name="title_map">Map</string>
    <string name="title_currency">Currency Converter</string>
    <string name="title_country">Country Information</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_of_story">Title..</string>
    <string name="description">Story Description..</string>
    <string name="post_btn">Post Story</string>
    <string name="email">android.studio@android.com</string>
    <string name="user_name">Android Studio</string>
    <string name="new_story">New Story</string>
    <string name="date">Date of post..</string>

    <!--Country Information -->
    <string name="south_korea">South Korea</string>
    <string name="burundi">Burundi</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="information">Information</string>

    <!--Single Story View-->
    <string name="action_settings">Settings</string>
    <string name="image">Image</string>
    <string name="title_activity_story_view">Story View</string>
    <string name="post_cover">post_cover</string>
    <string name="title">Title</string>
    <string name="desc_view">Description</string>
    <string name="posted_on">Posted on</string>
    <string name="date_posted">TextView</string>

    <!--User Profile-->
    <string name="profile_picture">Profile picture</string>
    <string name="userName">Enter Your Name</string>
    <string name="create_user_profile">Create User Profile</string>
    <string name="submit_userProfile">Submit</string>

</resources>
