<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_stroy__view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.acta.acta.app.Activity.SinglePostView"
    tools:showIn="@layout/activity_single_post_view">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_btn"
        android:layout_centerHorizontal="true"
        android:id="@+id/image"
        android:elevation="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_cover" />

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/title"
        android:elevation="2dp"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:padding="20dp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/desc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:elevation="2dp"
        android:padding="20dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:inputType="textMultiLine"
        tools:ignore="TextViewEdits" />

    <TextView
        android:text="@string/posted_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:id="@+id/posted_on" />

    <TextView
        android:text="@string/date_posted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/posted_on"
        android:layout_toEndOf="@+id/posted_on"
        android:layout_marginStart="25dp"
        android:id="@+id/date_posted"
        android:padding="5dp"
        android:inputType="datetime"
        android:textStyle="normal|bold|italic"
        tools:ignore="TextViewEdits" />

</RelativeLayout>
