<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/new_story"
    tools:context="com.acta.acta.app.Activity.NewPostActivity">

    <ImageButton
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_btn"
        android:id="@+id/add_img"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:elevation="2dp"
        android:background="#00ffffff"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="Image"
        android:layout_width="match_parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/title_of_story"
        android:ems="10"
        android:layout_below="@+id/add_img"
        android:background="@drawable/input_corner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/story_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:elevation="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect|textMultiLine"
        android:hint="@string/description"
        android:ems="10"
        android:background="@drawable/input_corner"
        android:layout_below="@+id/story_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/desc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:padding="15dp"
        android:elevation="2dp" />

    <Button
        android:text="@string/post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_btn"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:elevation="4dp"
        android:radius="5dp"
    />
</RelativeLayout>
