<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Post_image"
            app:srcCompat="@mipmap/add_btn"
            android:scaleType="centerCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Post_image"
        app:srcCompat="@mipmap/add_btn"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:elevation="5dp"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:padding="20dp"
            android:textStyle="normal|bold"
            android:hint="@string/title_of_story"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:elevation="5dp"
            android:layout_centerHorizontal="true" />

        <!--<TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/date" />-->
            android:hint="@string/title_of_story" /> -->

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:padding="20dp"
            android:hint="@string/description"
       />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tag"
                android:background="#cecece"
                android:hint="Tag.." />

            <TextView
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:hint="@string/date"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </LinearLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>